# grok-cli

./: .gitignore  README.md  pyproject.toml
src/grok_cli/: __init__.py  main.py
src/grok_cli/api/: __init__.py  client.py
src/grok_cli/cli/: __init__.py  app.py
src/grok_cli/core/: __init__.py  agent.py
src/grok_cli/services/: __init__.py  app_factory.py
src/grok_cli/utils/: __init__.py  ascii_art.py  command_executor.py  command_parser.py  file_handler.py  interactive_prompts.py  ui.py
